# threadlens

./: .env.release.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN-SYSTEM.md  LICENSE  README.ko.md  README.md  SECURITY.md  SUPPORT.md  alert_rules.json  package-config.test.cjs  package.json  pnpm-lock.yaml  roadmap_state.json  server.py  tsconfig.base.json  w4_checklist.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  desktop-artifacts.yml  desktop-release.yml  macos-release.yml
apps/api-ts/: package.json  tsconfig.json
apps/desktop-electron/: README.md  SECURITY.md  build-dmg-background.cjs  build-dmg-background.test.cjs  ipc-validation.cjs  ipc-validation.test.cjs  main-menu.cjs  main-menu.test.cjs  main.cjs  package-config.test.cjs  package.json  preload.cjs
apps/desktop-tauri/: Cargo.toml  README.md  package.json  tauri.conf.json
apps/desktop-tauri/src-tauri/: Cargo.toml
apps/desktop-tauri/src-tauri/src/: main.rs
apps/tui/: package.json  tsconfig.json
apps/web/: index.html  package.json  playwright.config.ts  playwright.live.config.ts  tsconfig.json  vite.config.ts  (+1 more)
docs/: ARCHITECTURE.md  DESIGN_SYSTEM.md  PROVIDER_SUPPORT.md  README.es.md  README.ja.md  README.ko.md  README.pt-BR.md  README.zh-CN.md  TUI.md  WORKFLOWS.md
legacy/: README.md  server.py
scripts/: perf-smoke.sh  web-live-e2e-smoke.sh
tools/: generate-desktop-trust-notes.mjs  generate-desktop-trust-notes.test.mjs  generate-provider-support.mjs
(+570 files in other folders)
