[package]
name = "codex_mission_control"
version = "0.1.0"
edition = "2021"
build = "src-tauri/build.rs"

[lib]
name = "codex_mission_control_lib"
path = "src-tauri/src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "codex_mission_control"
path = "src-tauri/src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
